--- a/affutage.html
+++ b/affutage.html
@@ -334,13 +334,13 @@
     </main>
 
     <!-- ****************** BANNIERE COOKIES ****************** -->
-    <!-- <div class="btncookie" id="boxcookie">
+    <div class="btncookie" id="boxcookie">
       <p class="p-cookie">
         Nous vous informons que notre site web utilise des cookies nécessaires à
         son bon fonctionnement.
       </p>
       <button id="okcookie" type="button" class="#">ok</button>
-    </div> -->
+    </div>
 
     <!-- ****************** FOOTER ET MENTIONS LÉGALES ****************** -->
     <footer>
@@ -462,7 +462,7 @@
 
     <!-- ****************** SCRIPTS ****************** -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <!-- <script src="js/cookie.js"></script> -->
+    <script src="js/cookie.js"></script>
     <script src="js/affutage.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/menuSecondaire.js"></script>
