--- a/contact.html
+++ b/contact.html
@@ -200,13 +200,13 @@
 		</main>
 <!--######################################################## Cookie --><!-- bannière cookie #######################################################-->
 <!--######################################################## Cookie --><!-- bannière cookie #######################################################-->
-		<!-- <div class="btncookie" id="boxcookie">
+		<div class="btncookie" id="boxcookie">
 			<p class="p-cookie">
 				Nous vous informons que notre site web utilise des cookies nécessaires à
 				son bon fonctionnement.
 			</p>
 			<button id="okcookie" type="button" class="#">ok</button>
-		</div> -->
+		</div>
 <!-- ################################################################## FOOTER ##################################################################... -->
 <!-- ################################################################## FOOTER ##################################################################... -->
 		<footer>
@@ -328,6 +328,6 @@
 		<script src="js/footer.js"></script>
 		<script src="js/menu.js"></script>
 		<script src="js/burger.js"></script>
-		<!-- <script src="js/cookie.js"></script> -->
+		<script src="js/cookie.js"></script>
 	</body>
 </html>
