--- a/equipe.html
+++ b/equipe.html
@@ -459,13 +459,13 @@
 		</main>
 <!--############################################################# Cookie --><!-- bannière cookie #####################################################-->
 <!--############################################################# Cookie --><!-- bannière cookie #####################################################-->
-		<!-- <div class="btncookie" id="boxcookie">
+		<div class="btncookie" id="boxcookie">
 			<p class="p-cookie">
 				Nous vous informons que notre site web utilise des cookies nécessaires à
 				son bon fonctionnement.
 			</p>
 			<button id="okcookie" type="button" class="#">ok</button>
-		</div> -->
+		</div>
 <!--################################################################## FOOTER ########################################################################-->
 <!--################################################################## FOOTER ########################################################################-->
 		<footer>
@@ -591,6 +591,6 @@
 		<script src="js/burger.js"></script>
 		<script src="js/menuSecondaire.js"></script>
 		<script src="js/footer.js"></script>
-		<!-- <script src="js/cookie.js"></script> -->
+		<script src="js/cookie.js"></script>
 	</body>
 </html>
