--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous"
     ></script>
-    <!-- <script src="js/cookie.js"></script> -->
+    <script src="js/cookie.js"></script>
     <script src="js/script.js"></script>
     
   </body>
