--- a/tournees.html
+++ b/tournees.html
@@ -314,13 +314,13 @@
     </main>
 
     <!-- ****************** COOKIES ****************** -->
-    <!-- <div class="btncookie" id="boxcookie">
+    <div class="btncookie" id="boxcookie">
       <p class="p-cookie">
         Nous vous informons que notre site web utilise des cookies nécessaires à
         son bon fonctionnement.
       </p>
       <button id="okcookie" type="button" class="#">ok</button>
-    </div> -->
+    </div>
 
     <!-- ****************** FOOTER ET MENTIONS LÉGALES ****************** -->
     <footer>
@@ -447,7 +447,7 @@
     <script src="js/burger.js"></script>
     <script src="/js/menuSecondaire.js"></script>
     <script src="js/footer.js"></script>
-    <!-- <script src="js/cookie.js"></script> -->
+    <script src="js/cookie.js"></script>
 
   </body>
 </html>
