--- a/vente.html
+++ b/vente.html
@@ -358,13 +358,13 @@
     </main>
 
     <!-- ****************** BANNIERE COOKIES ****************** -->
-    <!-- <div class="btncookie" id="boxcookie">
+    <div class="btncookie" id="boxcookie">
       <p class="p-cookie">
         Nous vous informons que notre site web utilise des cookies nécessaires à
         son bon fonctionnement.
       </p>
       <button id="okcookie" type="button" class="#">ok</button>
-    </div> -->
+    </div>
 
     <!-- ****************** FOOTER ET MENTIONS LÉGALES ****************** -->
     <footer>
@@ -491,7 +491,7 @@
     <script src="js/burger.js"></script>
     <script src="js/menuSecondaire.js"></script>
     <script src="js/footer.js"></script>
-    <!-- <script src="js/cookie.js"></script> -->
+    <script src="js/cookie.js"></script>
 	  
   </body>
 </html>
