--- a/accueil.html
+++ b/accueil.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-	<meta charset="UTF-8" />
-	<meta name="description" content="Affûtage pays de Rance est une entreprise d'affûtage qui propose également un espace Vente et des Tournées de Ramassage à Saint-malo et ses alentours, Granville, Rennes et Lamballe. Notre travail est fait-main et donc très précis. Nous travaillons autant avec les professionels que les particuliers. ">
-	<meta name="keywords" content="Affûtage, vente, ramassage, outils, affûteur, APR35, APR">
-	<meta name="author" content="Billerait Cindy">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/accueil.css" />
-	<link rel="stylesheet" href="css/menu.css" />
-	<link rel="stylesheet" href="css/footerCookies.css" />
-	<title>Accueil</title>
+    <meta charset="UTF-8" />
+    <meta property="og:title" content="APR35 affûte vos outils et se déplace pour vous, particuliers et professionnels !">
+		<meta name="description" content="Affûtage pays de Rance est une entreprise d'affûtage qui propose également un espace Vente et des Tournées de Ramassage à Saint-malo et ses alentours, Granville, Rennes et Lamballe. Notre travail est fait-main et donc très précis. Nous travaillons autant avec les professionels que les particuliers. ">
+  	<meta name="keywords" content="Affûtage, vente, ramassage, outils, affûteur, APR35, APR, lames">
+  	<meta name="author" content="Billerait Cindy">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/accueil.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/footerCookies.css" />
+    <title>Accueil</title>
   </head>
   <!--######################################################## PAGE ACCUEIL ##########################################################################-->
   <!--######################################################## PAGE ACCUEIL ##########################################################################-->
@@ -125,7 +126,7 @@
           </div>
         </div>
         <div class="divLame">
-          <p>Accueil</p>
+          <h1>Accueil</h1>
           <img id="lame" src="img/menu/lameF.png" alt="lame" />
         </div>
       </div>
@@ -258,12 +259,12 @@
       <section class="sectionSlide">
         <div class="slideShow">
           <div id="slider">
-          <figure>
-              <img src="img/accueil/SLIDE1.jpg" alt="Equipe"/>
-              <img src="img/accueil/SLIDE2.jpg" alt="entreprise"/>
-              <img src="img/accueil/SLIDE3.jpg" alt="sculpture"/>
-              <img src="img/accueil/SLIDE4.jpg" alt="magasin"/>
-              <img src="img/accueil/SLIDE5.jpg" alt="magasin"/>
+            <figure>
+              <img src="img/accueil/SLIDE1.jpg" alt="Equipe" />
+              <img src="img/accueil/SLIDE2.jpg" alt="entreprise" />
+              <img src="img/accueil/SLIDE3.jpg" alt="sculpture" />
+              <img src="img/accueil/SLIDE4.jpg" alt="magasin" />
+              <img src="img/accueil/SLIDE5.jpg" alt="magasin" />
             </figure>
           </div>
         </div>
@@ -414,7 +415,7 @@
       <div class="ligneFooter">
         <div class="divLogoFooter">
           <p>Suivez-nous !</p>
-          <a target="_blank" href="https://www.facebook.com/APR35/" rel="noreferrer"
+          <a target="_blank" href="https://www.facebook.com/APR35/ " rel="noreferrer"
             ><img src="img/footer/fb.png" alt="logo facebook"
           /></a>
         </div>
@@ -443,7 +444,7 @@
         </div>
       </div>
       <div class="mentionsLegalesContener">
-        <h2>Mentions légales</h2>
+        <h2 >Mentions légales</h2>
         <p class="copyright">&copy;Junin Timothée &copy;Billerait Cindy</p>
         <div class="containerUlFooter">
           <ul>
