--- a/affutage.html
+++ b/affutage.html
@@ -265,7 +265,7 @@
 
       <!-- ****************** TITRE ET SOUS-TITRE ****************** -->
       <div class="div_titre">
-        <p class="titre">Affûtage d'outils</p>
+        <h1 class="titre">Affûtage d'outils</h1>
       </div>
       <p id="sous_titre">
         <em
