--- a/clients.html
+++ b/clients.html
@@ -262,7 +262,7 @@
 <!--########################################################### SECTION REMERCIEMENTS  ######################################################################### -->
 			<section class="remerciements">
 				<div class="div_titre">
-					<p class="titre">Nos Remerciements</p>
+					<h1 class="titre">Nos Remerciements</h1>
 				</div>
 				<p class="phraseAccroche">
 					Nous tenions à remercier nos clients,
