--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
 			<section class="sectionContact">
 			<div id="nousContacterContener">
 				<div class="div_titre">
-					<p class="titre" id="nousContacter">Nous contacter</p>
+					<h1 class="titre" id="nousContacter">Nous contacter</h1>
 				</div>
 				<div class="contenerDesDeuxCartes">
 				<div id="carteContact">
