--- a/equipe.html
+++ b/equipe.html
@@ -260,7 +260,7 @@
 <!-- ########################################################### PREMIERE SECTION JACKY ###############################################################-->
 			<section class="sectionsEquipe">
 				<div class="div_titre">
-					<p class="titre">NOTRE ÉQUIPE</p>
+					<h1 class="titre">NOTRE ÉQUIPE</h1>
 				</div>
 				<div class="contenerDesDeuxDivs">
 					<h2>Jacky</h2>
