--- a/tournees.html
+++ b/tournees.html
@@ -445,7 +445,7 @@
     <script src="js/affutage.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/burger.js"></script>
-    <script src="/js/menuSecondaire.js"></script>
+    <script src="js/menuSecondaire.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/cookie.js"></script>
 
