--- a/vente.html
+++ b/vente.html
@@ -256,7 +256,7 @@
     <main>
       <!-- ****************** TITRE ****************** -->
       <div class="div_titre">
-        <p class="titre">Vente d'outils</p>
+        <h1 class="titre">Vente d'outils</h1>
       </div>
 
       <!-- ****************** SECTION VENTE OUTILS ****************** -->
