--- a/fournisseurs.html
+++ b/fournisseurs.html
@@ -372,7 +372,7 @@
 <!--#####################################################    PREMIER SCROLL    ############################################################-->
 			<section class="partenairesSections">
 				<div class="scroll divScroll">
-					<h2>Outils pour bois, PVC, alu, acier :</h2>
+					<h2 class="h2Scroll">Outils pour bois, PVC, alu, acier :</h2>
 					<div class="fournisseurs scroller divScroll">
 						<div class="petitesDivs">
 							<a href="https://www.ake.de/"
@@ -451,7 +451,7 @@
 <!--############################################################ Deuxième scroll ##################################################################-->
 
 				<div class="scroll divScroll">
-					<h2>Electroportatifs</h2>
+					<h2 class="h2Scroll">Electroportatifs</h2>
 					<div class="fournisseurs scroller divScroll">
 						<div class="petitesDivs">
 							<a href="https://www.alsafix.com/"
@@ -597,7 +597,7 @@
 <!-- ###################################################################TROISIEME SCROLL ########################################################-->
 
 				<div class="scroll">
-					<h2>Produits pour le travail du bois :</h2>
+					<h2 class="h2Scroll">Produits pour le travail du bois :</h2>
 					<div class="fournisseurs scroller divScroll">
 						<div class="petitesDivs">
 							<img
@@ -771,7 +771,7 @@
 <!--################################################################## Quatrième "scroll" ##############################################################-->
 
 				<div class="scroll divScroll">
-					<h2>Outils pour le béton</h2>
+					<h2 class="h2Scroll">Outils pour le béton</h2>
 					<div class="fournisseurs">
 						<p>
 							Outils de la marque Team Thaler Utilisation dans les branches
@@ -793,7 +793,7 @@
 <!--##################################################################### Cinquième "srcoll" ##############################################################-->
 <!--##################################################################### Cinquième "srcoll" ##############################################################-->
 				<div class="scroll divScroll">
-					<h2>Outils pour espaces verts</h2>
+					<h2 class="h2Scroll">Outils pour espaces verts</h2>
 					<div class="fournisseurs">
 						<p>
 							Chaîne de tronçonneuse, fers broyeurs, tailles haies et
