--- a/clients.html
+++ b/clients.html
@@ -2,8 +2,6 @@
 <html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Affûtage pays de Rance est une entreprise d'affûtage qui propose également un espace Vente et des Tournées de Ramassage à Saint-malo et ses alentours, Granville, Rennes et Lamballe. Notre travail est fait-main et donc très précis. Nous travaillons autant avec les professionels que les particuliers. ">
-  		<meta name="keywords" content="Affûtage, vente, ramassage, outils, affûteur, APR35, APR">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/clients.css" />
@@ -264,22 +262,22 @@
 				<div class="div_titre">
 					<h1 class="titre">Nos Remerciements</h1>
 				</div>
-				<p class="phraseAccroche">
-					Nous tenions à remercier nos clients,
-					<strong style="text-transform: uppercase"
-						>particuliers comme professionnels</strong
-					>
-					issus de divers secteurs. <br />
-				</p>
-				<div class="divMerciSection2">
-					<p class="merciSection2">
-						Merci tout simplement aux menuisier, ébénistes, charpentiers,
-						marine, couvreur, agenceurs, cuisinistes sur les départements
-						22-35-50 pour la confiance qu'ils nous accordent.
+				<div class="rightRemerciements">
+				<div id="texte_presentation">
+					<h2>Nous tenions à remercier nos clients,
+						<strong style="text-transform: uppercase"
+							>particuliers comme professionnels</strong
+						>
+						issus de divers secteurs. <br /></h2>
+					<p>
+					  <br />Merci tout simplement aux menuisier, ébénistes, charpentiers,
+					  marine, couvreur, agenceurs, cuisinistes sur les départements
+					  22-35-50 pour la confiance qu'ils nous accordent.
 					</p>
+				  </div>
 				</div>
-
-				<div class="decoFond">
+				  </section>
+				  <section class="dispositionCarte">
 					<div class="contenerCartesMerci">
 						<div class="cartesMerci">
 							<div class="divImageMerci">
@@ -375,7 +373,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
 			</section>
 		</main>
 <!--######################################################## Cookie --><!-- bannière cookie #######################################################-->
@@ -511,5 +508,6 @@
 		<script src="js/footer.js"></script>
 		<script src="js/menuSecondaire.js"></script>
 		<script src="js/cookie.js"></script>
+		<script src="js/client.js"></script>
 	</body>
 </html>
