--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
 					</div>
 					<div class="telephone">
 						<img src="img/accueil/telep.png" alt="logo telephone" />
-						<p id="telephone"><a class="lienTel" href="tel:0299810407">02 99 81 04 07</a></p>
+						<p><a href="tel:0299810407">02 99 81 04 07</a></p>
 					</div>
 					<div class="fax">
 						<img src="img/accueil/fax.png" alt="logo fax" />
@@ -188,7 +188,7 @@
 					<form class="contact-form">
 						<input id="name" type="text" placeholder="Name" /><br />
 						<input id="mail" type="email" placeholder="Email" /><br />
-						<textarea id="message" placeholder="Message" rows="3" cols="40">
+						<textarea id="message" placeholder="Message" rows="1" cols="45">
 						</textarea
 						><br/>
 						<input type="submit" id="btn" value="Envoyer">
