--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="canonical" href="https://bubamara0.github.io/apr-35/page1.html" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
     <link rel="stylesheet" href="css/style.css" />
     <title>Page d'atterrissage</title>
   </head>
