--- a/affutage.html
+++ b/affutage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
     <link rel="stylesheet" href="css/affutage.css" />
     <link rel="stylesheet" href="css/footerCookies.css" />
     <link rel="stylesheet" href="css/menu.css" />
